--- a/src/app/components/clientes/clientes-form/clientes-form.component.html
+++ b/src/app/components/clientes/clientes-form/clientes-form.component.html
@@ -34,27 +34,42 @@
 
             <div class="clientProfilePictureExpanded">
                 <img [src]="imagePreviewSrc || 'images/standard-profile-picture.jpg'" alt="Foto do Cliente" (click)="photoInput.click()">
-                <input #photoInput type="file" formControlName="clientPhotoForm" id="clientPhotoForm" accept="image/jpeg" (change)="onFileSelected($event)"> 
+                <input #photoInput type="file" formControlName="clientPhotoForm" id="clientPhotoForm" accept="image/jpeg" (change)="onFileSelected($event)">
+                @if (imagePreviewSrc != "images/standard-profile-picture.jpg") {
+                    <span (click)="deleteImage()">Excluir</span>
+                }
             </div>
         </form>
-        <div class="client-services-field">
-            <legend>Nenhum serviço encontrado para este cliente</legend>
-            <div class="client-services-infos">
-                <legend><p>RECEITA TOTAL</p><p>R$ 00.000,00</p></legend>
-                <legend><p>Ultima visita em</p><p>02/01/2024</p></legend>
-            </div>  
-            <div class="client-services-grid">
-                <legend>Data</legend>
-                <legend>Serviço</legend>
-                <legend>Realizado por</legend>
-                <div></div>
-                <div></div>
-                <div></div>
+        @if (routerType == 'edit'){
+            <div class="client-services-field">
+                @if (servicesList == null){
+                    <legend>Nenhum serviço encontrado para este cliente</legend>
+                }
+                @else {
+                    <div class="client-services-infos">
+                        <legend><p>RECEITA TOTAL</p><p>R$ 00.000,00</p></legend>
+                        <legend><p>Ultima visita em</p><p>02/01/2024</p></legend>
+                    </div>  
+                    <div class="client-services-grid">
+                        <legend>Data</legend>
+                        <legend>Serviço</legend>
+                        <legend>Realizado por</legend>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>   
+                }
             </div>
-        </div>
+        }
     </div>
     <div class="space-bar">
-        <a routerLink="/clientes"><button>Cancelar</button></a>
-        <button (click)="onSubmit()">Salvar</button>
+        @if (routerType == 'register'){
+            <a routerLink="/clientes"><button>Cancelar</button></a>
+            <button (click)="onSubmit()">Salvar</button>
+        }
+        @else if (routerType == 'edit'){
+            <button (click)="onDelete()">Excluir</button>
+            <button (click)="onEdit()">Editar</button>
+        }
     </div>
 </div>
