--- a/src/app/components/clientes/clientes-panel/clientes-panel.component.css
+++ b/src/app/components/clientes/clientes-panel/clientes-panel.component.css
@@ -57,13 +57,12 @@ a{
 
 .client-pesquisar-button{
     background-color: var(--dark-pink);
-    border-radius: 50%;
-    padding: 5px;
+    border-radius: 0% 15% 15% 0%;
+    padding: 4.5px;
 
     cursor: pointer;
     
     height: min-content;
-    margin-left: 10px;
 }
 
 #client-pesquisar-filtro{
@@ -74,57 +73,20 @@ a{
 
     outline: none;
     border: 1px solid var(--mid-pink);
-    border-radius: 5px;
+    border-radius: 5px 0px 0px 5px;
     
 }
 
+input[type="search"]::-webkit-search-cancel-button {
+  color: var(--dark-pink);
+}
+
 #client-pesquisar-filtro:focus{
-    outline: 2px solid var(--dark-pink);
+    outline: 1.5px solid var(--dark-pink);
 }
 
 .client-pesquisar-button svg{
     display: flex;
-}
-
-.search-box{
-    background-color: white;
-    width: 100%;
-    height: 300px;
-
-    display: none;
-
-    position: absolute;
-    top: 125%;
-    z-index: 2;
-    border: 1px solid var(--light-pink);
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
-    border-radius: 5px;
-    overflow: hidden;
-}
-
-.search-box > legend{
-    color: rgba(0, 0, 0, 0.5);
-    padding: 5px;
-}
-
-.filters-selection{
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.filters-selection button{
-    padding: 5px 20px;
-    border-radius: 2px;
-    background-color: white;
-}
-
-.filters-selection button:hover{
-    background-color: var(--light-pink);
-    cursor: pointer;
-}
-
-.search-box:hover ~ #client-pesquisar-filtro{
-    outline: 2px solid var(--dark-pink);
 }
 
 /* ADICIONAR NOVO CLIENTE */
