--- a/src/app/components/clientes/clientes-panel/clientes-panel.component.html
+++ b/src/app/components/clientes/clientes-panel/clientes-panel.component.html
@@ -8,26 +8,8 @@
         <h2>CLIENTES</h2>
     </div>
     <div class="filter-container">
-        <div class="search-box">
-            <legend>Filtros</legend>
-            <div class="filters-selection">
-                <button>Cliente</button>
-                <button>Profissional</button>
-                <button>Comanda</button>
-            </div>
-            <div>
-                <label for="filtar-date-initial">
-                    <legend>De:</legend>
-                    <input type="date">
-                </label>
-                <label for="filtar-date-end">
-                    <legend>Até:</legend>
-                    <input type="date">
-                </label>
-            </div>
-            <hr>
-        </div>
-        <input type="search" id="client-pesquisar-filtro" placeholder="Pesquisar">
+        <input #clientSearchbar type="search" id="client-pesquisar-filtro" placeholder="Pesquisar" autocomplete="off">
+
         <div class="client-pesquisar-button">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff">
                 <path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/>
@@ -40,7 +22,6 @@
         </svg>
         <legend>Cadastrar novo cliente</legend>
     </a>
-    <div class="Empty-Space" style="display: none;"></div>
 </div>
 <hr>
 <div class="clientList-content">
