feat: atualizacao de endpoints da api

--- a/src/app/components/services/sevice-form/sevice-form.component.html
+++ b/src/app/components/services/sevice-form/sevice-form.component.html
@@ -18,7 +18,7 @@
                 <legend>Categoria:</legend>
                 <select formControlName="serviceCategory" id="serviceCategory">
                     <option value="0" selected>Selecione uma categoria</option>
-                    <option value="CABELO">CABELO</option>
+                    <option value="CABELOS">CABELOS</option>
                     <option value="SOBRANCELHAS">SOBRANCELHAS</option>
                     <option value="CILIOS">CILIOS</option>
                     <option value="UNHAS">UNHAS</option>
